argocd/networking/httproute_prom.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: networking
spec:
  parentRefs:
    - name: external-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: prometheus-operated
          namespace: monitoring
          port: 9090
